--- a/src/main/resources/assets/slashblade/lang/en_us.json
+++ b/src/main/resources/assets/slashblade/lang/en_us.json
@@ -96,6 +96,7 @@
   "slash_art.slashblade.drive_horizontal":"Drive",
   "slash_art.slashblade.drive_vertical":"Vertical Drive",
   "slash_art.slashblade.wave_edge":"Wave Edge",
+  "slash_art.slashblade.piercing":"Piercing",
 
   "adv.slashblade.proudsoul": "Limit of Refine=50\nBlade is Fragile.\nThe soul never wastes.",
   "adv.slashblade.proudsoul_tiny":"Limit of Refine=10\nMysterious burning soul.",
