--- a/src/main/resources/assets/slashblade/lang/ja_jp.json
+++ b/src/main/resources/assets/slashblade/lang/ja_jp.json
@@ -91,6 +91,7 @@
   "slash_art.slashblade.drive_horizontal": "幻影刃",
   "slash_art.slashblade.drive_vertical": "幻影刃-縦",
   "slash_art.slashblade.wave_edge": "波刀竜胆",
+  "slash_art.slashblade.piercing":"平突き",
 
   "adv.slashblade.proudsoul": "強化限界 Refine=50\n折れど継がれる誇り高き魂",
   "adv.slashblade.proudsoul_tiny": "強化限界 Refine=10\n幽かな霊炎",
