--- a/src/main/resources/assets/slashblade/lang/zh_cn.json
+++ b/src/main/resources/assets/slashblade/lang/zh_cn.json
@@ -91,6 +91,7 @@
     "slash_art.slashblade.drive_horizontal": "幻影刃",
     "slash_art.slashblade.drive_vertical": "幻影刃-纵",
     "slash_art.slashblade.wave_edge": "波刀龙胆",
+	"slash_art.slashblade.piercing":"平突",
 
     "adv.slashblade.proudsoul": "强化限制=50\n利刃易折\n断刃之中高傲的灵魂之火",
     "adv.slashblade.proudsoul_tiny": "强化限制=10\n幽微闪烁的灵魂之炎",
