--- a/src/main/resources/assets/slashblade/lang/zh_tw.json
+++ b/src/main/resources/assets/slashblade/lang/zh_tw.json
@@ -92,6 +92,7 @@
   "slash_art.slashblade.drive_horizontal": "幻影刃",
   "slash_art.slashblade.drive_vertical": "幻影刃－縱",
   "slash_art.slashblade.wave_edge": "波刀龍膽",
+  "slash_art.slashblade.piercing":"平突",
 
   "slashblade.sword_type.bewitched": "妖",
   "slashblade.sword_type.enchanted": "印",
