--- a/src/main/resources/assets/slashblade/lang/en_us.json
+++ b/src/main/resources/assets/slashblade/lang/en_us.json
@@ -102,7 +102,7 @@
   "adv.slashblade.proudsoul_tiny":"Limit of Refine=10\nMysterious burning soul.",
   "adv.slashblade.proudsoul_ingot": "Limit of Refine=100\nSteel forged with a burning soul.",
   "adv.slashblade.proudsoul_sphere": "Limit of Refine=150\nSmelting\nJewel of Steel with a faint flame.",
-  "adv.slashblade.proudsoul_crystal": "Limit of Refine=200\nBlasting\nThe core of the blade soul.",
+  "adv.slashblade.proudsoul_crystal": "Limit of Refine=200\nBlasting\nThe core of the blade soul.\nCould get blade's SE.",
   "adv.slashblade.proudsoul_trapezohedron":"Unlimited Refinement\nMore Blasting\nThe blade soul that arrives at the end.",
   "adv.slashblade.proudsoul_activated":"HUNGER\nSneak&Use",
   "adv.slashblade.proudsoul_awakened":"awakened",
