--- a/src/main/resources/assets/slashblade/lang/zh_cn.json
+++ b/src/main/resources/assets/slashblade/lang/zh_cn.json
@@ -97,7 +97,7 @@
     "adv.slashblade.proudsoul_tiny": "强化限制=10\n幽微闪烁的灵魂之炎",
     "adv.slashblade.proudsoul_ingot": "强化限制=100\n以高傲紫色之炎锻造的灵铁",
     "adv.slashblade.proudsoul_sphere": "强化限制=150\n熔炉冶炼\n缭绕着虚幻灵魂之炎的宝珠",
-    "adv.slashblade.proudsoul_crystal": "强化限制=200\n高炉精炼\n灵魂钢铁的核心",
+    "adv.slashblade.proudsoul_crystal": "强化限制=200\n高炉精炼\n灵魂钢铁的核心\n可用于获取刀之特性",
     "adv.slashblade.proudsoul_trapezohedron": "无限制强化\n进一步精炼\n摇曳的高傲之结晶\n此乃千锤百炼之终末",
     "adv.slashblade.proudsoul_activated": "HUNGER\nSneak&Use",
     "adv.slashblade.proudsoul_awakened": "awakened",
@@ -116,7 +116,6 @@
 
     "adv.slashblade.imitation_broken": "贪慕虚荣",
     "adv.slashblade.imitation_broken.desc": "一意孤行的下场",
-
 
     "adv.slashblade.movesets": "操作说明",
     "adv.slashblade.movesets.desc": "指令表",
