--- a/src/main/resources/assets/slashblade/lang/en_us.json
+++ b/src/main/resources/assets/slashblade/lang/en_us.json
@@ -203,5 +203,6 @@
 
   "attribute.name.generic.slashblade_damage": "Slashblade Damage",
 
+  "emi.category.slashblade.shaped_blade": "Slashblade Crafting",
   "emi.category.slashblade.slashblade_smithing": "Slashblade Smithing"
 }
