--- a/src/main/resources/assets/slashblade/lang/zh_cn.json
+++ b/src/main/resources/assets/slashblade/lang/zh_cn.json
@@ -202,5 +202,6 @@
 
     "attribute.name.generic.slashblade_damage": "拔刀剑伤害系数",
 
+    "emi.category.slashblade.shaped_blade": "拔刀剑合成",
     "emi.category.slashblade.slashblade_smithing": "拔刀剑锻造"
 }
